# Yolov7-Inference-SDK

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
models/: README.md
scripts/: detect_image.py
yolov7_inference_sdk/: __init__.py  annotations.py  detector.py
